--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 			<h4 class="color2 margin">(HAPPY Women's day)</h3>
 			<p>Ê ku,</p>
 			<p>hmm.. .</p>
-			<p>Cậu mạnh thiệt đó</p>
+			<p>Dỉm mạnh thiệt đó</p>
 			<p>9. các môn quái vật hay gì??? </p>
-			<p>Cậu chắc chắn đậu đại học</p>
+			<p>Dỉm chắc chắn đậu đại học</p>
 			<p>Nhưng mà tôi sẽ không thua đâu</p>
 			<p>Hãy cố gắng phát huy nhé.</p>
-			<p>Vì cậu là động lực giúp tôi mạnh hơn đó</p>
+			<p>Vì Dỉm là động lực giúp tôi mạnh hơn đó</p>
             <p>Cảm ơn vì đã giúp tôi chạy Deadline</p>
 			<p class="text-right">Happy women's day!</p>
 			<p class="text-right">♥Buckycho' </p>
